完善日志记录，改用异步记录。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pywin32 = "^306"
 pywinauto = "^0.6.8"
 pyautogui = "^0.9.54"
 opencv-python = "^4.10.0.84"
+matplotlib = "^3.9.1"
+darts = "^0.30.0"
 
 
 [build-system]
