优化代码布局。

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,3 +1,6 @@
 [xt_client]
 program_dir = C:/e_trader/bin.x64/XtItClient.exe
 check_interval = 10
+
+[data]
+investment_targets = assets/investment_targets/investment_targets.csv
