增加tsmiser模型，运用该模型确定买入的股票。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ opencv-python = "^4.10.0.84"
 matplotlib = "^3.9.1"
 darts = "^0.30.0"
 schedule = "^1.2.2"
+apscheduler = "^3.10.4"
 
 
 [build-system]
