--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ matplotlib = "^3.9.1"
 darts = "^0.30.0"
 schedule = "^1.2.2"
 apscheduler = "^3.10.4"
+concurrent-log-handler = "^0.9.25"
+colorlog = "^6.8.2"
 
 
 [build-system]
