--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ schedule = "^1.2.2"
 apscheduler = "^3.10.4"
 concurrent-log-handler = "^0.9.25"
 colorlog = "^6.8.2"
+jupyterlab = "^4.2.4"
 
 
 [build-system]
